# fastblocks

./: .coverage-ratchet.json  .coverage.les-pro.pid20758.Xlkbq5gx.HmYlUIj0H0Vh  .coverage.les-pro.pid20760.Xm8q9f1x.HixCcT2IEsjh  .coverage.les-pro.pid20761.XLxBEGMx.Hlr7No9dL6Ih  .coverage.les-pro.pid20762.Xq9vT74x.H9z11fFLZD1h  .coverage.les-pro.pid67582.XAOZSgjx.HGDESpOOix7h  .coverage.les-pro.pid67584.XZb43JRx.HQGDmhgVWWFh  .gitignore  .lycheignore  .lycheignore.backup.json  .mcp.json  .mcp.json.bak  .pre-commit-config-ai.yaml  .pre-commit-config.yaml  .secrets.baseline  .windsurfrules  AGENTS.md  CHANGELOG.md  CHANGELOG.md.backup.json  CLAUDE.md  CONTRIBUTING.md  FASTBLOCKS_UNIFIED_PLAN.md  GEMINI.md  IMPROVEMENT_PLAN.md  LICENSE  MIGRATION-0.17.0.md  PRE_COMMIT_FIXES.md  QWEN.md  README.md  README.md.backup.json  REFACTORING_MISSION_COMPLETE.md  REFURB_MODERNIZATION.md  RESOLUTION_COMPLETE.md  RULES.md  TEST_COVERAGE_IMPROVEMENT_SUMMARY.md  TYPE_CHECKING_FIXES.md  adapters.yaml  complexipy.json  conftest.py  coverage.json  (+9 more)
.oneiric_cache/: workflow_checkpoints.sqlite
.pyscn/reports/: analyze_20251231_111259.html
adapters/app/: _base.py
archive/: IMPROVEMENT_PLAN.md
config/: otel-collector-config.yaml  prometheus.yml
docs/: ACB_DEPENDS_PATTERNS.md  ACB_GUIDE.md  ACB_PLUGIN_EXAMPLE.md  ADMIN_SHELL.md  ADMIN_SHELL_QUICKREF.md  ARCHITECTURE.md  ARCHITECTURE.md.backup.json  COMPARISONS.md  GETTING_STARTED.md  JINJA2_ASYNC_ENVIRONMENT_USAGE.md  LESSONS_LEARNED.md  NOTES.md  ONEIRIC_GUIDE.md  README.md  README.md.backup.json  SECURITY.md  TYPE_SYSTEM_MIGRATION.md  WEBSOCKET_GUIDE.md  WEBSOCKET_GUIDE.md.backup.json
docs/archive/: ACB_CONFIGURATION_EXAMPLES.md  ACB_INTEGRATION.md  ACB_PLUGIN_EXAMPLE.md  ACB_REFACTORING.md  README.md  README.md.backup.json
docs/archive/incidents/: pre-commit-resolution-2025-10-09.md
docs/archive/migrations/: CURRENT_MIGRATION_STATE.md  MIDDLEWARE_MIGRATION_COMPLETE.md  MIGRATION-0.17.0.md  MIGRATION-0.17.0.md.backup.json  ONEIRIC_MIGRATION_PLAN.md  ONEIRIC_MIGRATION_PLAN.md.backup
docs/archive/sprints-and-fixes/: TYPE_PARAMETER_FIXES.md
docs/archive/summaries/: FASTBLOCKS_ADMIN_SHELL_SUMMARY.md
docs/baselines/: acb_baseline.txt  acb_usage_detailed.txt  health_baseline.json  mcp_cli_baseline.txt  migration_baseline.txt
docs/examples/: TEMPLATE_EXAMPLES.md  syntax_demo.py
docs/migrations/: 0.7-to-0.8.md  CURRENT_MIGRATION_STATE.md  MIDDLEWARE_MIGRATION_COMPLETE.md  MIGRATION-0.17.0.md  ONEIRIC_MIGRATION_PHASE_2_FINAL.md  ONEIRIC_MIGRATION_PLAN.md  ONEIRIC_MIGRATION_STATUS.md  OVERALL_MIGRATION_PROGRESS_SUMMARY.md  READY_FOR_IMPLEMENTATION.md
docs/migrations/phase_0/: PHASE_0_COMPLETE.md
docs/migrations/phase_1/: PHASE_1_COMPLETE_SUMMARY.md  PHASE_1_MIGRATION_PLAN.md  PHASE_1_PROGRESS.md
docs/migrations/phase_2/: PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_EVENTS_MIGRATION_COMPLETE.md  PHASE_2_FINAL_COMPLETION_REPORT.md  PHASE_2_HEALTH_MIGRATION_COMPLETE.md  PHASE_2_VALIDATION_MIGRATION_COMPLETE.md
docs/migrations/phase_3/: PHASE_3_ADMIN_BASE_MIGRATION_COMPLETE.md  PHASE_3_APP_BASE_MIGRATION_COMPLETE.md  PHASE_3_APP_DEFAULT_MIGRATION_COMPLETE.md  PHASE_3_AUTH_BASE_MIGRATION_COMPLETE.md  PHASE_3_SQLADMIN_MIGRATION_COMPLETE.md
docs/migrations/phase_4/: PHASE_4_ADVANCED_MANAGER_MIGRATION_COMPLETE.md  PHASE_4_ASYNC_FILTERS_MIGRATION_COMPLETE.md  (+12 more)
examples/: websocket_client_examples.py
fastblocks/: .pre-commit-config.yaml  Dockerfile  Procfile  Procfile.tmpl  README.md  __init__.py  __main__.py  _events_integration.py  _events_integration.py.backup.json  _health_integration.py  _validation_integration.py  _workflows_integration.py  applications.py  cache.py  caching.py  caching.py.backup.json  cli.py  cli.py.backup.json  decorators.py  dependencies.py  exceptions.py  htmx.py  initializers.py  mail.py  main.py  main.py.tmpl  middleware.py  pyproject.toml.tmpl  routing.py  templating.py
fastblocks/actions/: README.md  __init__.py  minify.py
fastblocks/adapters/: README.md  __init__.py  oneiric_helper.py
fastblocks/auth/: firebase.py
fastblocks/core/: __init__.py  patterns.py  resolver.py
fastblocks/mcp/: README.md  __init__.py  __main__.py  cli.py  config_audit.py  config_cli.py  config_health.py  config_migration.py  configuration.py  discovery.py  env_manager.py  health.py  registry.py  resources.py  server.py  tools.py  websocket_tools.py
fastblocks/shell/: __init__.py  adapter.py
fastblocks/websocket/: __init__.py  auth.py  binding.py  origin.py  server.py  server.py.backup.json  tls_config.py  tls_config.py.backup.json
scripts/: build.sh
tests/: .coverage  TESTING.md  _mocks.py  _websocket_stub.py  additional_caching_tests.py  conftest.py  ensure_cli.py  patch_site_packages.py  test_actions_gather.py  test_actions_simple.py  test_actions_sync.py  test_applications.py  test_applications_comprehensive.py  test_applications_simple.py  test_bidirectional_interop.py  test_caching.py  test_caching_additional.py  test_caching_comprehensive.py  test_caching_constants.py  test_cli.py  test_cli_commands.py  test_cli_comprehensive.py  test_cli_coverage.py  test_cli_direct.py  test_cli_structure.py  test_config.py  test_context_sharing.py  test_coverage_boost.py  test_decorators.py  test_decorators_simple.py  test_dunder_main_module.py  test_events_integration.py  test_exceptions.py  test_exceptions_comprehensive.py  test_exceptions_property.py  test_filesystem_loader.py  test_health_integration.py  test_htmx.py  test_htmx_comprehensive.py  test_htmx_property.py  (+26 more)
tests/mcp/: __init__.py  test_ci_guard.py  test_configuration.py  test_dunder_main_module.py  test_mcp_foundation.py  test_mcp_server.py  test_registry.py  test_tools.py
tests/performance/: TEST_REQUIREMENTS.md  test_performance_verification.py  test_template_performance.py
tests/security/: conftest.py  test_input_validation.py
tests/shell/: __init__.py  test_integration.py  test_shell_adapter.py
tests/unit/: test_websocket_auth.py
tests/websocket/: test_auth.py  test_auth_default.py  test_binding.py  test_origin_allowlist.py  test_sanitized_errors.py
(+246 files in other folders)
