[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "fastblocks"
version = "0.18.7"
description = "Starlette based app for the rapid delivery of HTMX/Jinja template blocks"
readme = "README.md"
keywords = [
    "htmx",
    "httpx",
    "jinja",
    "pydantic",
    "redis",
    "sqladmin",
    "sqlalchemy",
    "sqlmodel",
    "starlette",
]
maintainers = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.11.0",
    "brotli-asgi>=1.5.0",
    "granian[reload]>=2.6.0",
    "htmy[lxml]>=0.9.0",
    "mcp-common>=0.3.3",
    "minify-html>=0.18.1",
    "pydantic>=2.12.4",
    "pyfiglet>=1.0.4",
    "rcssmin>=1.2.2",
    "rjsmin>=1.2.5",
    "secure>=1.0.1",
    "starception>=1.2.1",
    "starlette>=0.50.0",
    "starlette-async-jinja>=1.13.3",
    "starlette-csrf>=3.0.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[project.license]
text = "BSD-3-Clause"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "crackerjack>=0.44.34",
    "detect-secrets>=1.5.0",
    "excalidraw-mcp>=0.34.0",
    "penpot-mcp>=0.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "refurb>=2.2.0",
    "session-buddy>=0.9.4",
]
admin = [
    "sqladmin>=0.22.0",
]
monitoring = [
    "logfire[starlette]>=4.15.1",
    "sentry-sdk[starlette]>=3.0.0a7",
    "urllib3>=2.5.0",
]
images = [
    "cloudinary>=1.44.1",
    "imagekitio>=4.2.0",
]
cache = [
    "acb>=0.31.12",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "*_test.py",
    "test_*.py",
    "tests/",
]
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C901",
    "D",
    "F",
    "I",
    "UP",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "E402",
    "F821",
    "UP040",
]
fixable = [
    "ALL",
]
unfixable = []

[tool.ruff.lint.isort]
no-lines-before = [
    "first-party",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*/data/*,tests/*,test_*.py,*_test.py"
quiet-level = 3
ignore-words-list = "crate,uptodate,nd"

[tool.pyproject-fmt]
column_width = 120
indent = 4

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = [
    "test_*.py",
    "*_test.py",
]
testpaths = [
    "tests",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "unit: marks test as a unit test",
    "performance: mark test as a performance test (disables parallel execution)",
    "integration: marks test as an integration test",
    "slow: mark test as slow to skip with --skip-slow",
]
timeout = "300"
timeout_method = "thread"
addopts = [
    "--cov=fastblocks",
    "--cov-report=term",
    "-n", "auto",
    "--dist=loadfile"
]
filterwarnings = [
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]


[tool.coverage.run]
branch = false
source = [
    "fastblocks",
]
data_file = ".coverage"
parallel = false
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
]

[tool.coverage.report]
fail_under = 10
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
    "@overload",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]
ignore_errors = false

[tool.pyright]
verboseOutput = true
include = [
    "fastblocks",
]
exclude = [
    "*_test.py",
    "test_*.py",
    "tests/",
    "scratch",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportInvalidTypeForm = false
reportUnknownLambdaType = false
reportUnknownParameterType = "warning"
reportPrivateUsage = false
reportUnusedFunction = false  # Template filters registered via decorators
pythonVersion = "3.13"

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
]
max_complexity = 15

[tool.creosote]
paths = [
    "fastblocks",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "pyyaml",
    "inflection",
    "pytest-timeout",
    "pyleak",
    "uv",
    "pre-commit",
    "hatchling",
    "google-crc32c",
    "pytest-asyncio",
    "pytest-cov",
    "pyfiglet",
    "pytest",
    "tomli-w",
    "htmy",
    "pytest-xdist",
    "pytest-mock",
    "pydantic-settings",
    "keyring",
    "pytest-benchmark",
]

[tool.refurb]
enable_all = true
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",
    "FURB120",
]

[tool.bandit]
target = [
    "fastblocks",
]
skips = [
    "B603",
    "B602",
    "B607",
    "B101",
    "B102",
    "B403",
    "B404",
    "B311",
    "B704",
    "B301",
]
exclude_dirs = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.uv]
keyring-provider = "subprocess"
index-url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
check-url = "https://pypi.org/simple/"
prerelease = "allow"
override-dependencies = ["pyscn<1.5.1"]

[tool.vulture]
min_confidence = 86
paths = [
    "fastblocks",
]
ignore_names = [
    "cls",
]
